--- a/src/pages/common_css/style.css
+++ b/src/pages/common_css/style.css
@@ -1,10 +1,10 @@
-.dimission{
+.style{
     width: 100%;
     height: 100%;
     .flex-box{
         /* display: flex; */
         width: 100%;
-        height: 20%;
+        height: 15%;
         /* justify-content:space-between;
         align-items: center; */
         background-color:white;
