--- a/src/pages/auth_management/role.css
+++ b/src/pages/auth_management/role.css
@@ -1,10 +1,4 @@
 .role{
     height: 100%;
-    .flex-box{
-        display: flex;
-        width: 100%;
-        height: 10%;
-        justify-content:right;
-        align-items: center;
-    }
+    margin-top: 7%;
 }
